[forest] Get into the action faster

--- a/forest/index.html
+++ b/forest/index.html
@@ -27,9 +27,7 @@
       <section>
         <h1>The Dark Forest</h1>
 
-        <p>
-          Press &lt;Escape&gt; to start/hide this menu, press it again to return to this menu.
-        </p>
+        <p>Find Link! 🔗</p>
       </section>
 
       <fieldset id="inspector">
