--- a/jspit/bsp.html
+++ b/jspit/bsp.html
@@ -36,9 +36,12 @@
         <h3><a href="index.html">Back to Welcome screen</a></h3>
 
         <p>
-          Demonstrates procedural generation within a random Binary Space
-          Partitioning. This is still very much a WIP, and is roughly only
-          "half done" (rooms, but no doors or hallways):
+          Primarily inspired by <a
+            href="http://www.roguebasin.com/index.php?title=Basic_BSP_Dungeon_generation"
+            >Rogue Basin BSP article</a>.
+          Demonstrates procedural dungeon generation within a random Binary
+          Space Partitioning. This is still very much a WIP, and is roughly
+          only "half done" (rooms, but no doors or hallways):
         </p>
 
         <ul>
