[jspit/bsp] use onKey.byID for buttons handlers

--- a/jspit/bsp.html
+++ b/jspit/bsp.html
@@ -25,6 +25,7 @@
 
       <button
         style="float: right; font-size: 1.5em; line-height: 1"
+        id="regenWorld"
         data-keycode="Backspace"
         title="<BS>: Regenerate the world">♻</button>
 
@@ -155,7 +156,7 @@
 
     <div class="buttonbar moves left"></div>
     <div class="buttonbar actions right float">
-      <button data-key="@" title="Drop Player">@</button>
+      <button data-key="@" id="dropPlayer" title="Drop Player">@</button>
     </div>
 
     <script type="module" src="./bsp.js"></script>
