[jspit/bsp] update note about mostly working

--- a/jspit/bsp.html
+++ b/jspit/bsp.html
@@ -63,7 +63,8 @@
             more space to the smaller dimension, and placing a door randomly
             weighted towards the center</li>
           <li>(adjacent blocks of) rooms then have connective hallways added;
-          this mostly works most of the time!</li>
+            this mostly works, but sometimes disconnected components still
+            remain...</li>
         </ul>
 
         <p>Press <code>@</code> to play through the level; press <code>@</code>
