--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -148,14 +148,14 @@
       import {DOMgeonInspector} from 'cdom/domgeon';
       new DOMgeonInspector(dmg, document.querySelector('#inspector'));
 
-      import {fillRect, roomShader, borderShader} from 'cdom/builder';
+      import * as build from 'cdom/builder';
       const floorShader = {plane: 'solid', kind: 'floor', classList: ['support', 'passable'], text: '·'};
       const wallShader = {plane: 'solid', kind: 'wall', text: '#'};
       const doorShader = {plane: 'solid', kind: 'door', classList: 'interact'};
 
       dmg.grid.getPlane('solid').classList.add('lit');
 
-      fillRect(dmg.grid, {x: 0, y: 0, w: 13, h: 8}, roomShader({
+      build.fillRect(dmg.grid, {x: 0, y: 0, w: 13, h: 8}, build.roomShader({
         floors: floorShader,
         walls: wallShader,
         doors: doorShader,
@@ -163,12 +163,12 @@
           pos.x === rect.x + Math.floor(rect.w/2),
       }));
 
-      fillRect(dmg.grid, {x: 5, y: -5, w: 3, h: 5}, roomShader({
+      build.fillRect(dmg.grid, {x: 5, y: -5, w: 3, h: 5}, build.roomShader({
         floors: floorShader,
-        walls: borderShader(null, wallShader),
+        walls: build.borderShader(null, wallShader),
       }));
 
-      fillRect(dmg.grid, {x: 4, y: -10, w: 5, h: 5}, roomShader({
+      build.fillRect(dmg.grid, {x: 4, y: -10, w: 5, h: 5}, build.roomShader({
         floors: floorShader,
         walls: wallShader,
         doors: doorShader,
