[jspit/dla] eject all javascript code from html

--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -221,83 +221,7 @@
       <button data-key="@" title="Drop Player">@</button>
     </div>
 
-    <script type="module">
-      import DLA from './dla'; // TODO default
-      import {bindVars} from './config';
-      import {DOMgeon, DOMgeonInspector} from 'cdom/domgeon';
-
-      const ctx = {
-        getInput: (name) => document.querySelector(`.menu input[name="${name}"]`) || null,
-        getSelect: (name) => document.querySelector(`.menu select[name="${name}"]`) || null,
-      };
-      bindVars({ctx, data: DLA.config});
-
-      const moveBar = document.querySelector('.buttonbar.moves');
-      const dmg = window.dmg = new DOMgeon({
-        ui: document.body,
-        keys: document.body,
-        grid: document.querySelector('.grid'),
-        moveBar,
-        actionBar: document.querySelector('.buttonbar.actions'),
-      });
-      const inspector = new DOMgeonInspector(dmg, document.querySelector('#inspector'));
-
-      const initialDrop = 0.25; // auto-drop player at this proportion of limit particles
-      let dropped = false;
-      const dropPlayer = () => {
-        let actor = dmg.grid.queryTile({plane: 'solid', className: ['input', 'focus', 'mover']});
-        if (actor) {
-          actor.parentNode?.removeChild(actor);
-          actor = null;
-          // TODO reset view anchor?
-        } else {
-          dropped = true;
-          const pos = world.config.seeds[0]; // TODO input
-          actor = dmg.grid.createTile({
-            plane: 'solid',
-            pos,
-            kind: 'mover',
-            classList: ['input', 'focus'],
-            text: '@',
-          });
-        }
-        dmg.updateActorView(actor);
-      };
-
-      const world = new DLA(dmg);
-      dmg.animParts.push(_ => {
-        let playing = !!dmg.grid.queryTile({plane: 'solid', className: ['input', 'focus', 'mover']});
-        if (particleID) {
-          particleID.innerText = world.particleID.toString();
-          if (!dropped && !playing && world.particleID >= initialDrop*world.config.particleLimit) {
-            dropPlayer();
-            playing = true;
-          }
-        }
-        dmg.grid.el.classList.toggle('playing', playing);
-        const dropButton = document.querySelector('button[data-key="@"]');
-        if (moveBar) moveBar.style.display = playing ? '' : 'none';
-        return true;
-      });
-
-      dmg.onKey.byCode['Backspace'] = () => {
-        world.reset();
-        particleID.innerText = '0';
-        dropped = false;
-      };
-      dmg.onKey.byKey['@'] = ({type}) => {
-        if (type === 'keydown') return;
-        dropPlayer();
-      };
-
-      dmg.onKey.byCode['Space'] = ({type}) => {
-        const enabled = type === 'keydown';
-        dmg.grid.el.classList.toggle('inspectable', enabled);
-        dmg.grid.el.classList.toggle('retro', enabled);
-        if (enabled) dmg.grid.el.addEventListener('mousemove', inspector);
-        else dmg.grid.el.removeEventListener('mousemove', inspector);
-      };
-    </script>
+    <script type="module" src="./dla.js"></script>
   </body>
 
 </html>
